--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 	"dependencies": {
 		"@expo/vector-icons": "^14.0.2",
 		"@react-navigation/native": "^6.0.2",
-		"expo": "~51.0.28",
+		"expo": "^45.0.8",
+		"expo-build-properties": "~0.12.5",
 		"expo-constants": "~16.0.2",
 		"expo-font": "~12.0.9",
 		"expo-linking": "~6.3.1",
@@ -44,8 +45,7 @@
 		"react-native-safe-area-context": "4.10.5",
 		"react-native-screens": "3.31.1",
 		"react-native-web": "~0.19.10",
-		"tailwindcss": "^3.4.11",
-		"expo-build-properties": "~0.12.5"
+		"tailwindcss": "^3.4.11"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
