--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
 		"test": "jest --watchAll",
 		"lint": "expo lint"
 	},
-	"resolutions": {
-		"@expo/cli": "xxx"
-	},
 	"jest": {
 		"preset": "jest-expo"
 	},
 	"dependencies": {
+		"@expo/config-plugins": "^8.0.8",
 		"@expo/vector-icons": "^14.0.2",
 		"@react-navigation/native": "^6.0.2",
-		"expo": "^45.0.8",
+		"expo": "^51.0.32",
 		"expo-build-properties": "~0.12.5",
 		"expo-constants": "~16.0.2",
 		"expo-font": "~12.0.9",
